2008-11-01 Jens Tkotz <jens@peino.de> 1.5.10-svn-b8

 * Change: Litte layout fixes

 * Change: "Missing" languages in setup are now just an information.

2008-10-31 Jens Tkotz <jens@peino.de> 1.5.10-svn-b7

 * Update: wz_tooltip.js V5.3

2008-10-31 Jens Tkotz <jens@peino.de> 1.5.10-svn-b6

 * Fix: Removed call off ctype_digit() as its not always available.

 * Fix: Move debug footer at a place where its visibile when embedded.

2008-10-17 Jens Tkotz <jens@peino.de> 1.5.10-svn-b5

 * Fix: With emailing on an error appeared after recreating thumbs.

 Thanks to MrC from forums.

 * Fix: Voting in thumbsview broken.

 Thanks to adegutis from forums.

2008-09-28 Jens Tkotz <jens@peino.de> 1.5.10-svn-b4

 * Fix: Convert newlines in RSS in the same way as in the albums view.

 Thanks to Rollcage from forum.

2008-09-25 Jens Tkotz <jens@peino.de> 1.5.10-svn-b3

 * Fix: Added param for brackets for slideshow link on mainpage.

   Thanks to Rollcage from forum.

 * Change: A few icons.

2008-09-23 Jens Tkotz <jens@peino.de> 1.5.10-svn-b2

 * Enancement: Added more cancel/done button in the user management.

 * Fix: use of gTranslate() instead of _() at some places.

 * Fix: Added 'g-button' classes for some button for consistency.

 * Change: translation domain for platform functions.

 Thanks to Niels Baggesen

2008-09-18 Jens Tkotz <jens@peino.de> 1.5.10-svn-b1

 * Fix: Attempt to delete a subalbum via album commandbox failed.
        "delete_item.php not found".

        Thanks to Drrrl from Forum.

2008-09-16 Chris Kelly <ckdake@ckdake.com> 1.5.9

 * Release: 1.5.9 

2008-09-16 Jens Tkotz <jens@peino.de> 1.5.9-svn-b30

 * Fix: Little last minute fix ;-)
        Comment indication was enabled anytime on mainpage.

 * Fix: Some wordings.

   Thanks Julien.
   
2008-09-16 Jens Tkotz <jens@peino.de> 1.5.9-svn-b29

 * Manifest updates etc.

2008-09-16 Jens Tkotz <jens@peino.de> 1.5.9-svn-b28

 * SECURITY FIX: Arbitrary file disclosure
   